# BruvChatClient

./: .gitignore  CMakeLists.txt
src/: MessageUI.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  crypto.cpp  crypto.h  device.cpp  device.h  ed25519.cpp  ed25519.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  message.cpp  message.h  session.cpp  session.h  user.cpp  user.h  utils.h  x25519.cpp  x25519.h
